[package]
name = "gap_query_interval_tree"
version = "0.0.1"
authors = ["James Forster <james.forsterer@gmail.com>"]
description = """
A crate that provides a gap-query optimized interval-tree
data-structure.
"""
documentation = "https://docs.rs/gap_query_interval_tree"
readme = "README.md"
homepage = "https://github.com/ripytide/gap_query_interval_tree"
repository = "https://github.com/ripytide/gap_query_interval_tree"
license = "AGPL-3.0-or-later"
keywords = ["data-structures", "map", "data", "library"]
categories = ["data-structures"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discrete_range_map = {path="../discrete_range_map"}
itertools = "0.10.5"
serde = "1.0.164"
