[package]
name = "gap_query_interval_tree"
version = "0.2.0"
authors = ["James Forster <james.forsterer@gmail.com>"]
description = """
A crate that provides a gap-query optimized interval-tree
data-structure.
"""
documentation = "https://docs.rs/gap_query_interval_tree"
readme = "README.md"
homepage = "https://github.com/ripytide/gap_query_interval_tree"
repository = "https://github.com/ripytide/gap_query_interval_tree"
license = "AGPL-3.0-or-later"
keywords = ["data-structures", "map", "data", "library"]
categories = ["data-structures"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodit = { path = "../nodit" }
itertools = { version = "0.12.0", default-features = false }
serde = { version = "1.0.195", default-features = false, features = ["alloc"] }

[lints.clippy]
tabs_in_doc_comments = "allow"
